<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
  android:layout_height="match_parent"
    android:background="@color/black"
    android:overScrollMode="never">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/d20Number"
            android:layout_width="89dp"
            android:layout_height="35dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="28dp"
            android:autofillHints="@string/enter_num"
            android:background="@color/grey"
            android:ems="10"

            android:hint="@string/number"
            android:inputType="number"
            android:text="@string/zero"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <EditText
            android:id="@+id/d12Number"
            android:layout_width="89dp"
            android:layout_height="35dp"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="43dp"
            android:autofillHints="@string/enter_num"
            android:background="@color/grey"
            android:ems="10"
            android:hint="@string/number"
            android:inputType="number"
            android:text="@string/zero"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/d20Number"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/d10Number"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <EditText
            android:id="@+id/d10Number"
            android:layout_width="89dp"
            android:layout_height="35dp"
            android:layout_marginStart="28dp"
            android:autofillHints="@string/enter_num"
            android:background="@color/grey"
            android:ems="10"
            android:hint="@string/number"
            android:inputType="number"
            android:text="@string/zero"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <EditText
            android:id="@+id/d8Number"
            android:layout_width="89dp"
            android:layout_height="35dp"
            android:layout_marginTop="330dp"
            android:layout_marginEnd="28dp"
            android:autofillHints="@string/enter_num"
            android:background="@color/grey"
            android:ems="10"
            android:hint="@string/number"
            android:inputType="number"
            android:text="@string/zero"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/d6Number"
            android:layout_width="89dp"
            android:layout_height="35dp"
            android:layout_marginTop="12dp"
            android:autofillHints="@string/enter_num"
            android:background="@color/grey"
            android:ems="10"
            android:hint="@string/number"
            android:inputType="number"
            android:text="@string/zero"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/d8Number"
            app:layout_constraintHorizontal_bias="0.541"
            app:layout_constraintStart_toEndOf="@+id/d4Number"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/diceTitle"
            android:layout_width="153dp"
            android:layout_height="51dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/amarante"
            android:text="@string/dice_roll"
            android:textColor="@color/yellow"
            android:textSize="35sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/d4Number"
            android:layout_width="89dp"
            android:layout_height="35dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="330dp"
            android:autofillHints="@string/enter_num"
            android:background="@color/grey"
            android:ems="10"
            android:hint="@string/enter_num"
            android:inputType="number"
            android:text="@string/zero"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/rollButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="159dp"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="164dp"
            android:background="@color/dark_grey"
            android:fontFamily="@font/amarante"
            android:text="@string/roll"
            android:textColor="@color/yellow"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d12Number"
            app:layout_constraintVertical_bias="0.48" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="106dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/d4"
            app:layout_constraintBottom_toTopOf="@+id/d4Number"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultView"
            app:srcCompat="@drawable/d4" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="114dp"
            android:layout_height="116dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/d6"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/resultView"
            app:srcCompat="@drawable/d6" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/d8"
            app:layout_constraintBottom_toTopOf="@+id/d8Number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultView"
            app:srcCompat="@drawable/d8" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="103dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/d10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d4Number"
            app:srcCompat="@drawable/d10" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="111dp"
            android:layout_height="116dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="33dp"
            android:contentDescription="@string/d12"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/d6Number"
            app:srcCompat="@drawable/d12" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="102dp"
            android:layout_height="114dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/d20"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/d8Number"
            app:srcCompat="@drawable/d20" />

        <TextView
            android:id="@+id/resultView"
            android:layout_width="410dp"
            android:layout_height="59dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="1dp"
            android:fontFamily="@font/amarante"
            android:text="@string/result"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="30sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/backToMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="72dp"
            android:layout_marginBottom="138dp"
            android:backgroundTint="#030000"
            android:contentDescription="@string/back_to_menu"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/diceTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <ImageButton
            android:id="@+id/diceToNotes"
            android:layout_width="64dp"
            android:layout_height="63dp"
            android:layout_marginStart="49dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#000000"
            android:contentDescription="@string/character_notes"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/diceTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/notes" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>