<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:overScrollMode="never">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        tools:context=".CharNotes">

        <TextView
            android:id="@+id/charTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="96dp"
            android:fontFamily="@font/amarante"
            android:text="@string/character_notes"
            android:textColor="@color/yellow"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/backToMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="23dp"
            android:backgroundTint="#000000"
            android:contentDescription="@string/back_to_menu"
            app:layout_constraintEnd_toStartOf="@+id/charTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <EditText
            android:id="@+id/healthBox"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/health"
            android:background="@color/grey"
            android:ems="10"
            android:saveEnabled="true"
            android:hint="@string/health"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/healthPoints" />

        <EditText
            android:id="@+id/armorBox"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/armor"
            android:background="@color/grey"
            android:ems="10"
            android:hint="@string/armor"
            android:inputType="textPersonName"
            android:saveEnabled="true"
            app:layout_constraintStart_toEndOf="@+id/healthBox"
            app:layout_constraintTop_toBottomOf="@+id/armorClass" />

        <EditText
            android:id="@+id/initiativeBox"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="44dp"
            android:layout_marginBottom="98dp"
            android:autofillHints="@string/initiative"
            android:background="@color/grey"
            android:ems="10"
            android:hint="@string/initiative"
            android:inputType="textPersonName"
            android:saveEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/charTextbox"
            app:layout_constraintStart_toEndOf="@+id/armorBox" />

        <EditText
            android:id="@+id/charTextbox"
            android:layout_width="360dp"
            android:layout_height="522dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="19dp"
            android:autofillHints="@string/character_notes"
            android:background="@color/grey"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/character_notes"
            android:saveEnabled="true"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notes" />

        <ImageView
            android:id="@+id/armorClass"
            android:layout_width="80dp"
            android:layout_height="87dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/armor"
            app:layout_constraintStart_toEndOf="@+id/healthPoints"
            app:layout_constraintTop_toBottomOf="@+id/charTitle"
            app:srcCompat="@drawable/armor" />

        <ImageView
            android:id="@+id/healthPoints"
            android:layout_width="82dp"
            android:layout_height="69dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/health"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backToMenu"
            app:srcCompat="@drawable/health" />

        <ImageView
            android:id="@+id/initiative"
            android:layout_width="78dp"
            android:layout_height="80dp"
            android:layout_marginEnd="125dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/initiative"
            app:layout_constraintBottom_toTopOf="@+id/initiativeBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toEndOf="@+id/initiativeBox"
            app:srcCompat="@drawable/initiative" />

        <ImageView
            android:id="@+id/notes"
            android:layout_width="92dp"
            android:layout_height="73dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="321dp"
            android:contentDescription="@string/character_notes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/healthBox"
            app:srcCompat="@drawable/notes" />

        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginStart="219dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="37dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#000000"
            android:contentDescription="@string/save"
            app:layout_constraintBottom_toTopOf="@+id/charTextbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/notes"
            app:layout_constraintTop_toBottomOf="@+id/initiativeBox"
            app:srcCompat="@android:drawable/ic_menu_save" />

        <ImageButton
            android:id="@+id/charToDice"
            android:layout_width="60dp"
            android:layout_height="66dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="7dp"
            android:adjustViewBounds="false"
            android:backgroundTint="#00000000"
            android:contentDescription="@string/dice_roll"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/charTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/d20" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>